# battleship-pygame-lan

./: README.md  flake.nix  pyproject.toml
.github/workflows/: build-windows.yml  format-check.yml  python-tests.yml  release.yml
nix/: module.nix
src/battleship_pygame_lan/: __main__.py  game_logic.py  game_manager.py  gui.py  io.py
src/battleship_pygame_lan/game_manager/: __init__.py  enums.py  game_manager.py
src/battleship_pygame_lan/gui/: board_render.py  main_menu.py
src/battleship_pygame_lan/logic/: __init__.py  board.py  boards.py  enums.py  models.py  player.py
src/battleship_pygame_lan/network/: __init__.py  client.py  models.py  network_core.py  payloads.py  server.py
tests/: test_game_logic.py  test_game_manager_integration.py  test_network_stuff.py
tests/tests_network/: test_client.py  test_integration.py  test_payloads.py  test_server.py
