[project]
name = "battleship-pygame-lan"
version = "0.1.0"
description = "LAN Game of battleships, made with pygame."
readme = "README.md"
authors = [
    { name = "Szymon P", email = "szymon_jozef@proton.me" },
    { name = "Jakub K", email = "173594616+Real-Morbius@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "ruff>=0.15.9",
]

[project.scripts]
battleship-pygame-lan = "battleship_pygame_lan:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  
check_untyped_defs = true
files = "src"                 

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true 

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
