[project]
name = "battleship-pygame-lan"
version = "1.1.2"
description = "LAN Game of battleships, made with pygame."
readme = "README.md"
authors = [
    { name = "Szymon P", email = "szymon_jozef@proton.me" },
    { name = "Jakub K", email = "173594616+Real-Morbius@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "pygame-ce>=2.5.7",
]

[project.scripts]
battleship-pygame-lan = "battleship_pygame_lan.__main__:main"

[project.gui-scripts] # for windows
battleship_pygame_lan-gui = "battleship_pygame_lan.__main__:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv_build]
include-package-data = true

[tool.uv.extra-build-dependencies]
pygame = ["setuptools._distutils.msvccompiler"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ANN"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
files = "src"

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "pyinstaller>=6.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
